--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -29,10 +29,11 @@ $font-family: "Roboto", sans-serif;
 
 /* For Navbar Start */
 .navbar {
-  position: fixed;
+  // position: fixed;
   width: 100%;
   top: 0;
   left: 0;
+  opacity: 0.9;
   background-color: transparent;
   box-shadow: 0px 10px 28px 2px rgba(241, 232, 232, 0.5);
   backdrop-filter: blur(10px);
