--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -7,6 +7,9 @@ $font-family: "Roboto", sans-serif;
   box-sizing: border-box;
   scroll-behavior: smooth;
   font-family: $font-family;
+  .bg-redbrick {
+    background-color: #e86f52
+  }
 }
 
 :root {
@@ -14,7 +17,7 @@ $font-family: "Roboto", sans-serif;
   --main-bg: ;
   --main-color: "";
 
-  --main-theme-bg: red;
+  --main-theme-bg: #e86f52;
   --main-theme-color: ;
 }
 
@@ -23,7 +26,7 @@ $font-family: "Roboto", sans-serif;
   --main-bg: ;
   --main-color: "";
 
-  --main-theme-bg: red;
+  --main-theme-bg: #e86f52;
   --main-theme-color: ;
 }
 
@@ -33,12 +36,17 @@ $font-family: "Roboto", sans-serif;
   width: 100%;
   top: 0;
   left: 0;
-  opacity: 0.9;
+  opacity: 0.97;
   background-color: transparent;
   box-shadow: 0px 10px 28px 2px rgba(241, 232, 232, 0.5);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   z-index: 1000;
+
+  .bg-red {
+    background-color: #e86f52 !important;
+  }
+
 }
 
 /* For Navbar End */
@@ -47,10 +55,11 @@ $font-family: "Roboto", sans-serif;
 .first-index {
   width: 100%;
   height: 100vh;
-  background-image: url(../img/main-img.webp);
+  background-image: url(../img/main-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  background-color: #525252;
 }
 .first-index::before {
   content: "";
@@ -59,7 +68,7 @@ $font-family: "Roboto", sans-serif;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  // background-color: rgba(0, 0, 0, 0.2);
   z-index: 300;
 }
 /* For First Index end */
@@ -81,10 +90,10 @@ $font-family: "Roboto", sans-serif;
         position: relative;
         background-color: #ffffff !important;
         margin-bottom: 10px;
-        box-shadow: 0px 10px 30px 4px rgba(205, 200, 200, 0.5);
+        // box-shadow: 0px 10px 30px 4px rgba(205, 200, 200, 0.5);
         h3 {
           margin: auto;
-          color: red;
+          color: #e86f52;
           padding: 5px 10px;
         }
         .bar::before,
@@ -93,7 +102,7 @@ $font-family: "Roboto", sans-serif;
           position: absolute;
           width: 4px;
           height: 61px;
-          background-color: red;
+          background-color: #e86f52;
         }
         .bar::before {
           margin-top: 0px;
@@ -121,6 +130,11 @@ $font-family: "Roboto", sans-serif;
   }
   .card-container {
     transition: all 0.3s ease-in-out;
+
+    .card {
+      cursor: pointer;
+      height: 470px;
+    }
 
     .card-body {
       .text-row {
@@ -154,6 +168,12 @@ $font-family: "Roboto", sans-serif;
         padding-top: 5px;
         padding-bottom: 10px;
       }
+
+      .footer-row .v-btn:hover {
+        color: #fff !important;
+        background-color: #e86f52;
+      }
+
     }
   }
 }
@@ -348,7 +368,7 @@ $font-family: "Roboto", sans-serif;
     height: auto;
     padding: 60px 0px;
     .active {
-      background-color: red !important;
+      background-color: #e86f52 !important;
       color: #fff;
     }
   }
@@ -363,7 +383,7 @@ $font-family: "Roboto", sans-serif;
     }
     .card-container {
       &:hover {
-        transform: scale(1.1);
+        transform: scale(1.03);
       }
     }
   }
@@ -483,7 +503,7 @@ $font-family: "Roboto", sans-serif;
     height: auto;
     padding: 40px 0px;
     .active {
-      background-color: red !important;
+      background-color: #e86f52 !important;
       color: #fff;
     }
   }
