--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -7,6 +7,12 @@ $font-family: "Roboto", sans-serif;
   box-sizing: border-box;
   scroll-behavior: smooth;
   font-family: $font-family;
+  position: relative;
+  text-decoration: none;
+}
+
+body {
+  overflow: hidden;
 }
 
 :root {
@@ -37,7 +43,7 @@ $font-family: "Roboto", sans-serif;
   box-shadow: 0px 6px 27px 2px rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(40px);
   -webkit-backdrop-filter: blur(40px);
-  z-index: 1000;
+  z-index: 1300;
   h2 {
     color: #e86f52;
   }
@@ -61,7 +67,7 @@ $font-family: "Roboto", sans-serif;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.4);
   z-index: 300;
 }
 /* For First Index end */
@@ -138,6 +144,8 @@ $font-family: "Roboto", sans-serif;
       padding-left: 12px;
       padding-right: 45px;
       background-color: rgba(255, 255, 255, 0.4);
+      backdrop-filter: blur(30px);
+      -webkit-backdrop-filter: blur(30px);
       border-top-left-radius: 18px;
       border-bottom-left-radius: 18px;
       margin-top: 120px;
@@ -221,7 +229,7 @@ $font-family: "Roboto", sans-serif;
 
     .inner {
       display: flex;
-  
+
       align-items: center;
       transition: transform 0.4s ease-in-out;
     }
@@ -622,107 +630,130 @@ $font-family: "Roboto", sans-serif;
 .temp-package {
   width: 100%;
   height: auto;
-  padding-top: 80px;
-  padding-bottom: 20px;
-  background-color: #f6f5f2;
-  .up-content {
-    width: 99%;
-    height: 45vh;
-    margin: auto;
-    background-color: #e86f52;
-    border-radius: 10px;
-    box-shadow: 0px 6px 20px 2px rgba(0, 0, 0, 0.3);
-    position: relative;
-    overflow: hidden;
-    z-index: 300;
 
-    .img-text {
-      width: 50%;
-      height: auto;
-      color: white;
-      z-index: 350;
-      span {
-        padding: 6px 14px;
-        background-color: #525252;
-        color: #fff;
-        border-radius: 16px;
-        margin-top: 10px !important;
-      }
-      h1 {
-        margin-top: 20px !important;
-      }
-    }
-  }
-
-  .card-box {
+  .temp-package-data {
+    margin-top: 5%;
     width: 100%;
-    height: auto;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+    height: 100vh;
     position: relative;
-    .card-box-data {
-      width: 65%;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 20px;
-      box-shadow: 0px 6px 20px -1px rgba(0, 0, 0, 0.2);
+
+    &::after {
+      content: "";
       position: absolute;
-      transition: all 0.3s ease-in-out;
-      h2 {
-        color: #e86f52;
-      }
-      .sub-btn {
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to bottom, #e86f52 50%, #f6f5f2 50%);
+    }
+    .temp-header-row {
+      width: 100%;
+      height: auto;
+      padding: 10px 0px;
+      color: #fff;
+      z-index: 100;
+      text-align: center;
+
+      p {
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 90px;
+        height: 30px;
         background-color: #525252;
         color: #fff;
+        border-radius: 18px;
       }
-      .reg-btn {
-        background-color: #e86f52;
-        color: #fff;
-      }
-    }
-    .left {
-      margin-top: 200px;
-      margin-left: 420px;
-      z-index: 400;
-    }
-    .right {
-      margin-top: 220px;
-      margin-right: 420px;
-      z-index: 400;
     }
 
-    .mid {
-      margin-top: 240px;
-      z-index: 420;
+    .temp-package-row {
+      width: 100%;
+      height: auto;
+      z-index: 100;
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .swiper {
+        width: 100%;
+
+        .swiper-slide {
+          background-position: center;
+          background-size: cover;
+          width: 340px;
+          height: 500px;
+
+          .temp-package {
+            background-color: #fff;
+            width: 100%;
+            height: 100%;
+            border-radius: 18px;
+            // box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.5);
+            box-shadow: inset 0px 0px 7px rgba(0, 0, 0, 0.6);
+            padding: 40px 20px;
+            .v-icon {
+              color: rgb(12, 218, 12);
+            }
+            h3,
+            h1 {
+              color: #525252;
+            }
+
+            .sub-btn {
+              width: 80%;
+              padding: 20px 0px;
+              display: inline-flex;
+              border-radius: 18px;
+              text-transform: capitalize;
+              background-color: #e86f52;
+              color: #fff;
+            }
+          }
+        }
+      }
     }
   }
 
-  .pay-check {
-    margin-top: 40%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-
-    .pay-data {
-      .v-icon {
-        font-size: 28px;
-      }
-      span {
-        font-weight: bold;
-      }
-    }
+  .sponsor-ship {
+    margin-top: 0px;
+    padding: 30px 0px;
+    background-color: #fff;
+    z-index: 300;
   }
-}
-.sponsor-ship {
-  margin-top: 30px;
-  padding: 30px 0px;
-  background-color: #fff;
 }
 
 /* For Temp Package End */
+
+/* For Main Index Dashboard start */
+.index-dashboard {
+  width: 100%;
+  height: auto;
+  margin-top: 5%;
+  border: 2px solid red;
+  padding: 2% 0;
+
+  .dashboard {
+    min-height: 100vh;
+
+    .sidebar {
+      background-color: #f8f9fa;
+      border-right: 1px solid #dee2e6;
+    }
+
+    .content {
+      padding: 20px;
+    }
+    .nav-link {
+      cursor: pointer;
+
+      &:active {
+        background-color: #e9ecef;
+      }
+    }
+  }
+}
+/* For Main Index Dashboard end */
 
 // Styles for desktop view
 @media only screen and (min-width: 768px) {
@@ -749,15 +780,21 @@ $font-family: "Roboto", sans-serif;
         }
       }
       .nav-item:last-child {
-        background-color: transparent;
-        border: 2px solid #000;
+        .dropdown-menu {
+          position: absolute !important;
+          overflow: hidden;
+          left: -50%;
+          background-color: rgba(255, 255, 255, 0.9);
+          backdrop-filter: blur(30px);
+          -webkit-backdrop-filter: blur(30px);
+          box-shadow: 0px 6px 20px 1px rgba(0, 0, 0, 0.6);
+          .dropdown-item {
+            padding: 12px;
 
-        &:hover {
-          box-shadow: none;
-          background-color: #fff;
-          border-color: #e86f52;
-          .nav-link {
-            color: #e86f52;
+            &:hover {
+              background-color: #e86f52;
+              color: #fff;
+            }
           }
         }
       }
@@ -775,8 +812,7 @@ $font-family: "Roboto", sans-serif;
       z-index: 450;
       width: 80%;
       height: auto;
-      padding: 6px;
-      border-radius: 10px;
+      margin: auto;
       position: relative;
 
       .form-header {
@@ -801,7 +837,6 @@ $font-family: "Roboto", sans-serif;
       }
 
       .form-edit {
-        gap: 6px;
         width: 100%;
         height: 100%;
         display: flex;
@@ -809,32 +844,41 @@ $font-family: "Roboto", sans-serif;
 
         border-radius: 6px;
 
-        .v-select {
-          z-index: 400;
-          height: 110px;
-          font-size: 24px;
-          width: 30%;
-          font-weight: bold;
-          color: #000;
-          background-color: transparent !important;
-        }
+        .row {
+          width: 100%;
 
-        .form-btn-group {
-          z-index: 390;
-          right: 10px;
-          bottom: 100px;
-          position: absolute;
-          padding-top: 10px;
-          padding-left: 16px;
-          padding-right: 16px;
-          padding-bottom: 30px;
-          backdrop-filter: blur(20px);
-          -webkit-backdrop-filter: blur(20px);
-          border-radius: 10px;
-          .submit {
-            background-color: #e86f52;
-            color: #fff;
-            text-transform: capitalize;
+          .row-1,
+          .row-2 {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .v-select,
+            .v-text-field {
+              z-index: 400;
+              font-size: 24px;
+              width: 25%;
+              font-weight: bold;
+              color: #000;
+            }
+
+            .form-btn-group {
+              z-index: 390;
+              right: 10px;
+              bottom: 100px;
+              position: absolute;
+              padding-top: 10px;
+              padding-left: 16px;
+              padding-right: 16px;
+              padding-bottom: 30px;
+              backdrop-filter: blur(20px);
+              -webkit-backdrop-filter: blur(20px);
+              border-radius: 10px;
+              .submit {
+                background-color: #e86f52;
+                color: #fff;
+                text-transform: capitalize;
+              }
+            }
           }
         }
       }
