--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -11,6 +11,12 @@ $font-family: "Roboto", sans-serif;
   text-decoration: none;
 }
 
+.v-btn,
+button {
+  user-select: none;
+  -webkit-user-select: none;
+}
+
 body {
   overflow: hidden;
 }
@@ -39,7 +45,7 @@ body {
   width: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   box-shadow: 0px 6px 27px 2px rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(40px);
   -webkit-backdrop-filter: blur(40px);
@@ -80,6 +86,8 @@ body {
   background-color: #f6f5f2;
   .second-tabContent-data {
     display: flex;
+    position: relative;
+
     .tab-carousel-content {
       width: 100%;
 
@@ -105,6 +113,35 @@ body {
         transition: all 0.3s ease-in-out;
       }
     }
+
+    .sec-next,
+    .sec-prev {
+      position: absolute;
+      margin-top: 95px;
+      border-radius: 50%;
+      font-size: 22px;
+      padding: 4px 16px;
+      background-color: #fff;
+      cursor: pointer;
+      opacity: 0;
+      box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.5);
+      transition: all 0.3s ease-in-out;
+      z-index: 400;
+
+      &:hover {
+        background-color: #e86f52;
+        color: #fff;
+      }
+    }
+    .sec-prev {
+      transform: translateX(-200px);
+      margin-left: 120px;
+    }
+
+    .sec-next {
+      transform: translateX(200px);
+      right: 120px;
+    }
   }
 }
 
@@ -114,7 +151,7 @@ body {
     .v-btn {
       color: #525252;
       background-color: #fff;
-
+      border-radius: 30px;
       position: relative;
       box-shadow: 0px 6px 20px -2px rgba(0, 0, 0, 0.4);
       .red {
@@ -267,13 +304,15 @@ body {
   .next,
   .prev {
     position: absolute;
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: #e86f52;
     backdrop-filter: blur(30px);
+    color: #fff;
     -webkit-backdrop-filter: blur(30px);
     transition: all 0.3s ease-in-out;
+    box-shadow: 0px 4px 20px 1px rgba(0, 0, 0, 0.3);
     z-index: 500;
     top: 42%;
 
@@ -441,6 +480,7 @@ body {
           color: #fff;
           background-color: #e86f52;
           text-transform: capitalize;
+          border-radius: 18px;
         }
 
         .custom-btn:hover .custom-icon {
@@ -683,6 +723,9 @@ body {
           background-size: cover;
           width: 340px;
           height: 500px;
+          filter: blur(3px);
+          transition: all 0.4s ease-in-out;
+          overflow: hidden;
 
           .temp-package {
             background-color: #fff;
@@ -693,21 +736,125 @@ body {
             box-shadow: inset 0px 0px 7px rgba(0, 0, 0, 0.6);
             padding: 40px 20px;
             .v-icon {
-              color: rgb(12, 218, 12);
+              color: #e86f52;
             }
-            h3,
-            h1 {
+            h3 {
               color: #525252;
             }
 
-            .sub-btn {
-              width: 80%;
-              padding: 20px 0px;
-              display: inline-flex;
-              border-radius: 18px;
-              text-transform: capitalize;
-              background-color: #e86f52;
+            h1 {
+              span {
+                color: #525252;
+              }
+            }
+
+            .temp-btn {
+              position: relative;
+              overflow: hidden;
+
+              .sub-btn {
+                width: 80%;
+                padding: 20px 0px;
+                display: inline-flex;
+                border-radius: 18px;
+                text-transform: capitalize;
+                background-color: #525252;
+                color: #fff;
+                cursor: default;
+
+                .toggle-v-l {
+                  display: inline-block;
+                  height: 100%;
+                  width: 100%;
+                  display: flex;
+                  justify-content: center;
+
+                  .visible,
+                  .later-visible {
+                    transition: all 0.3s ease-in-out;
+                  }
+
+                  .later-visible {
+                    opacity: 0;
+                    position: absolute;
+                    bottom: -100px;
+                    color: #202842;
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        .swiper-slide-active {
+          filter: blur(0px);
+          .temp-package {
+            background-color: #202842;
+            color: #fff;
+            .temp-btn {
+              .sub-btn {
+                cursor: pointer;
+              }
+            }
+            .v-icon {
+              color: rgb(12, 218, 12);
+            }
+            h3 {
+              div {
+                transition: all 0.5s ease-in-out;
+                animation: zoomin 0.5s both;
+                font-weight: bolder;
+                color: #e86f52;
+              }
               color: #fff;
+            }
+            h1 {
+              animation: moveLeftAndBack 0.3s both;
+              color: #e86f52;
+            }
+
+            .p1 {
+              animation: moveRightAndBack 0.2s both;
+            }
+            .icon-1 {
+              animation: zoomin 0.22s both;
+            }
+            .p2 {
+              animation: moveRightAndBack 0.3s both;
+            }
+            .icon-2 {
+              animation: zoomin 0.32s both;
+            }
+            .p3 {
+              animation: moveRightAndBack 0.4s both;
+            }
+            .icon-3 {
+              animation: zoomin 0.42s both;
+            }
+            .p4 {
+              animation: moveRightAndBack 0.5s both;
+            }
+            .icon-4 {
+              animation: zoomin 0.52s both;
+            }
+            .temp-btn {
+              position: relative;
+
+              .sub-btn {
+                background-color: #e86f52;
+              }
+
+              &:hover .visible {
+                color: #202842;
+                opacity: 0;
+                transform: translateY(-50px);
+              }
+
+              &:hover .later-visible {
+                opacity: 1 !important;
+                bottom: 0px !important;
+                color: #fff !important;
+              }
             }
           }
         }
@@ -720,6 +867,72 @@ body {
     padding: 30px 0px;
     background-color: #fff;
     z-index: 300;
+  }
+}
+
+@keyframes zoomin {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes flipup {
+  0% {
+    opacity: 0;
+    transform: translateY(0);
+  }
+  50% {
+    opacity: 0;
+    transform: translateY(-50%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes flipdown {
+  0% {
+    opacity: 0;
+    transform: translateY(0);
+  }
+  50% {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes moveLeftAndBack {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateX(-300px); /* Adjust the distance as needed */
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes moveRightAndBack {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateX(400px); /* Adjust the distance as needed */
+  }
+  100% {
+    transform: translateY(0);
   }
 }
 
@@ -765,36 +978,25 @@ body {
       gap: 10px;
       .nav-item {
         background-color: transparent;
-        padding: 2px 12px;
-        border-radius: 6px;
-        font-weight: bold;
-        transition: all 0.2s ease-in-out;
-        cursor: pointer;
 
-        &:hover {
-          background-color: #e86f52;
-          box-shadow: 0px 8px 24px -1px rgba(0, 0, 0, 0.2);
-          .nav-link {
+        .nav-link {
+          transition: all 0.2s ease-in-out;
+          border-radius: 30px;
+          background-color: transparent;
+          color: #000;
+          cursor: pointer;
+          border-radius: 20px;
+          padding: 8px 20px;
+
+          &:hover {
+            background-color: #e86f52;
             color: #fff;
+            box-sizing: 0px 6px 24px 2px rgba(0, 0, 0, 0.4);
           }
-        }
-      }
-      .nav-item:last-child {
-        .dropdown-menu {
-          position: absolute !important;
-          overflow: hidden;
-          left: -50%;
-          background-color: rgba(255, 255, 255, 0.9);
-          backdrop-filter: blur(30px);
-          -webkit-backdrop-filter: blur(30px);
-          box-shadow: 0px 6px 20px 1px rgba(0, 0, 0, 0.6);
-          .dropdown-item {
-            padding: 12px;
-
-            &:hover {
-              background-color: #e86f52;
-              color: #fff;
-            }
+          &:active {
+            background-color: #e86f52;
+            color: #fff;
+            box-sizing: 0px 6px 24px 2px rgba(0, 0, 0, 0.4);
           }
         }
       }
@@ -896,11 +1098,13 @@ body {
     .second-tabContent-data {
       .tab-carousel-content {
         .button-bar {
+          overflow: hidden;
           margin: auto;
           width: 85%;
           padding: 14px 0px;
-          background-color: #525252;
-          border-radius: 4px;
+          background-color: #b6b4b4;
+          box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.4);
+          border-radius: 5px;
           div {
             margin: auto;
             justify-content: space-evenly;
@@ -910,36 +1114,23 @@ body {
             .tab-carousel-button {
               position: relative;
               width: 140px;
-            }
-            .active-bar::before,
-            .active-bar::after {
-              content: "";
-              position: absolute;
-
-              height: 44px;
-              background-color: #f6f5f2;
-              z-index: 500;
-            }
-            .active-bar::before {
-              margin-left: -230px;
-              width: 7px;
-
-              animation: fadeLeftAnimation 0.6s ease-in-out;
-            }
-
-            .active-bar::after {
-              margin-right: -120px;
-              width: 6px;
-
-              animation: fadeRightAnimation 0.6s ease-in-out;
+              border-radius: 30px;
             }
           }
         }
       }
+      &:hover .sec-prev {
+        opacity: 1;
+        transform: translateX(0);
+      }
+      &:hover .sec-next {
+        opacity: 1;
+        transform: translateX(0);
+      }
     }
   }
-  .active {
-    background-color: #e86f52 !important;
+  .active-btn {
+    background-color: #e86f52;
     color: #fff;
   }
 
