--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -48,7 +48,7 @@ body {
   width: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.98);
   box-shadow: 0px 6px 27px 2px rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(40px);
   -webkit-backdrop-filter: blur(40px);
@@ -189,6 +189,10 @@ body {
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    .cardImgBox {
+      height: 230px;
+    }
+
     .custom-save {
       text-align: center;
       position: absolute;
@@ -277,7 +281,7 @@ body {
 .third-carousel-page {
   width: 100%;
   height: auto;
-  background-color: pink;
+  background-color: #525252;
   position: relative;
   overflow: hidden;
 
@@ -1044,7 +1048,7 @@ body {
 
       .form-header {
         position: absolute;
-        top: -40px;
+        top: -46px;
         left: 6px;
         padding-top: 10px;
         padding-bottom: 4px;
@@ -1118,7 +1122,7 @@ body {
   .second-tabContent {
     width: 100%;
     height: auto;
-    padding: 60px 0px;
+    padding: 30px 0px 60px;
 
     .second-tabContent-data {
       .tab-carousel-content {
@@ -1127,8 +1131,8 @@ body {
           margin: auto;
           width: 85%;
           padding: 14px 0px;
-          background-color: #b6b4b4;
-          box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.4);
+          // background-color: #b6b4b4;
+          // box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.4);
           border-radius: 5px;
           div {
             margin: auto;
@@ -1321,7 +1325,7 @@ body {
 
       .form-header {
         position: absolute;
-        top: -46px;
+        top: -50px;
         right: 49px;
         padding-top: 10px;
         padding-bottom: 4px;
