--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -1,5 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 $font-family: "Roboto", sans-serif;
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import "../../../node_modules/bootstrap/scss/bootstrap.scss";
 
 * {
   padding: 0;
@@ -1403,7 +1405,7 @@ body {
 /* Post Detail view end */
 
 @mixin create_section_post_card {
-  box-shadow: 0px 6px 26px 1px rgba(0, 0, 0, 0.4);
+  // box-shadow: 0px 6px 26px 1px rgba(0, 0, 0, 0.4);
   padding: 0px 10px;
   border-radius: 10px;
 
@@ -1513,7 +1515,8 @@ body {
     }
 
     .body {
-      box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.4);
+      // box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.4);
+      background-color: #c1c2c1;
       width: 100%;
       height: 100%;
       padding: 16px;
