--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -1229,16 +1229,19 @@ body {
 
 /* For Temp */
 .view-posts {
+  width: 100%;
+  height: auto;
   border-radius: 8px;
   margin: 0px 1px;
   overflow: hidden;
   box-shadow: 0px 6px 20px 1px rgba(0, 0, 0, 0.3);
   .left {
+    height: 230px;
     position: relative;
     // box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
     .v-img {
+      height: auto;
       width: 100%;
-      object-fit: cover;
     }
 
     .show-icon {
@@ -1562,6 +1565,7 @@ body {
           filter: blur(3px);
           transition: all 0.4s ease-in-out;
           overflow: hidden;
+          background-color: #fff;
 
           .temp-package {
             width: 100%;
