package data retrieval updated

--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -744,7 +744,7 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 90px;
+        width: 20%;
         height: 30px;
         background-color: #525252;
         color: #fff;
