--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -717,6 +717,7 @@ body {
 .temp-package {
   width: 100%;
   height: auto;
+  margin-bottom: 30px;
 
   .temp-package-data {
     margin-top: 5%;
@@ -736,7 +737,7 @@ body {
     .temp-header-row {
       width: 100%;
       height: auto;
-      padding: 10px 0px;
+      padding: 30px 0px;
       color: #fff;
       z-index: 100;
       text-align: center;
