--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -2600,12 +2600,9 @@ body {
 /* Create Rent Post Section end */
 
 /* For Main Index Dashboard start */
-.index-dashboard {
+.user-dashboard {
   width: 100%;
   height: auto;
-  margin-top: 5%;
-  border: 2px solid red;
-  padding: 2% 0;
 
   .dashboard {
     min-height: 100vh;
