--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -276,6 +276,27 @@ body {
 }
 /* For First Index end */
 
+// GoogleMapContainer for locationPost view
+.googleContainerBox {
+  width: 100%;
+  height: 100vh;
+  background-image: url(../img/main-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  background-color: #fff !important;
+}
+.googleContainerBox::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(18, 18, 18, 0.8);
+  z-index: 300;
+}
+
 @mixin outline-btn {
   border: 2px solid transparent;
   text-transform: capitalize;
@@ -2781,7 +2802,6 @@ body {
               padding-top: 10px;
               padding-left: 16px;
               padding-right: 16px;
-              padding-bottom: 30px;
               backdrop-filter: blur(20px);
               -webkit-backdrop-filter: blur(20px);
               border-radius: 10px;
@@ -2797,6 +2817,88 @@ body {
     }
   }
   /* For First Index end */
+
+  // GoogleMapContainer for LocationPosts
+  .googleContainerBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .button-group {
+      z-index: 450;
+      width: 80%;
+      height: auto;
+      margin: auto;
+      position: relative;
+
+      .form-header {
+        position: absolute;
+        top: -46px;
+        left: 6px;
+        padding-top: 10px;
+        padding-bottom: 4px;
+        padding-left: 16px;
+        padding-right: 16px;
+        border-top: 5px solid #fff;
+        border-left: 5px solid #fff;
+        border-right: 5px solid #fff;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        background-color: rgba(255, 255, 255, 0.3);
+        backdrop-filter: blur(30px);
+        -webkit-backdrop-filter: blur(30px);
+        h5 {
+          color: #e86f52;
+        }
+      }
+
+      .form-edit {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+
+        border-radius: 6px;
+
+        .row {
+          width: 100%;
+
+          .row-1,
+          .row-2 {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .v-select,
+            .v-text-field {
+              z-index: 400;
+              font-size: 24px;
+              width: 25%;
+              font-weight: bold;
+              color: #000;
+            }
+
+            .form-btn-group {
+              z-index: 390;
+              right: 10px;
+              bottom: 100px;
+              position: absolute;
+              padding-top: 10px;
+              padding-left: 16px;
+              padding-right: 16px;
+              backdrop-filter: blur(20px);
+              -webkit-backdrop-filter: blur(20px);
+              border-radius: 10px;
+              .submit {
+                background-color: #e86f52;
+                color: #fff;
+                text-transform: capitalize;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 
   /* For Second Tab Content start */
   // For Second Tab Content Main page
