--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -2773,7 +2773,7 @@ body {
         width: 100%;
         height: 100%;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
 
         border-radius: 6px;
 
@@ -2856,7 +2856,7 @@ body {
         width: 100%;
         height: 100%;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
 
         border-radius: 6px;
 
