side bar edit ;)

--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -224,7 +224,7 @@ body {
 .offcanvas-edit {
   background-color: #ccc;
   padding: 0px;
-  margin-top: 70px;
+  margin-top: 50px;
   width: 380px !important;
 
   .offcanvas-body {
@@ -569,28 +569,28 @@ body {
       padding: 10px 0px;
 
       .search-bar {
-        border: 1px solid #525252;
-        margin-bottom: 12px;
-        border-radius: 10px;
-        display: flex;
-        overflow: hidden;
+        // border: 1px solid #525252;
+        // margin-bottom: 12px;
+        // border-radius: 10px;
+        // display: flex;
+        // overflow: hidden;
 
-        input {
-          width: 75%;
-          padding: 10px;
-          &:focus {
-            outline: none;
-          }
-        }
-        .v-btn {
-          width: auto;
-          height: auto;
-          color: #fff;
-          background-color: #e86f52;
-          text-transform: capitalize;
-          border-top-right-radius: 10px;
-          border-bottom-right-radius: 10px;
-        }
+        // input {
+        //   width: 75%;
+        //   padding: 10px;
+        //   &:focus {
+        //     outline: none;
+        //   }
+        // }
+        // .v-btn {
+        //   width: auto;
+        //   height: auto;
+        //   color: #fff;
+        //   background-color: #e86f52;
+        //   text-transform: capitalize;
+        //   border-top-right-radius: 10px;
+        //   border-bottom-right-radius: 10px;
+        // }
       }
 
       span {
@@ -1946,6 +1946,88 @@ body {
 
 /* For Temp Package End */
 
+/* For About in Main start */
+.about-in-main {
+  padding: 80px 0px;
+  background-color: #ddd;
+  position: relative;
+
+  .card-box {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    padding-top: 50px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 25px;
+    background-color: #fff;
+    box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    overflow: hidden;
+
+    .overlay-circle {
+      position: absolute;
+      width: 500px;
+      height: 500px;
+      border-radius: 50%;
+      background-color: #e86f52;
+      // background: linear-gradient(#ffffff, #e86f52);
+      transform: translateX(-25%) translateY(-70%);
+    }
+
+    .inner-box {
+      padding: 25px;
+      border-radius: 10px;
+      margin: auto;
+      background-color: #fff;
+      position: relative;
+      cursor: pointer;
+      box-shadow: 0px 6px 20px 4px rgba(0, 0, 0, 0.1);
+
+      .top-circle {
+        position: absolute;
+        width: 85px;
+        height: 85px;
+        border-radius: 50%;
+        border: 2px solid #eee;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transform: translateX(70%) translateY(-80%);
+        background-color: #eee;
+        box-shadow: 0px 6px 20px 1px rgba(0, 0, 0, 0.2);
+        z-index: 10;
+
+        .v-icon {
+          font-size: 32px;
+          padding: 32px;
+          // background-color: #e86f52;
+          // background: linear-gradient(145deg, #ffffff, #d1d1d1);
+          background: linear-gradient(125deg, #fff, #e44720);
+          box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3),
+            -5px -5px 15px rgba(255, 255, 255, 0.5);
+
+          border-radius: 50%;
+          color: #525252;
+        }
+      }
+
+      .header {
+        padding-top: 30px;
+        h4 {
+          margin: 10px 0px;
+          color: #e86f52;
+        }
+      }
+
+      &:hover {
+        box-shadow: 0px 6px 20px 4px rgba(0, 0, 0, 0.2);
+      }
+    }
+  }
+}
+/* For About in Main end */
+
 /* Post Detail view start */
 @mixin filter_above_img {
   background-color: rgba(255, 255, 255, 0.7);
@@ -2746,6 +2828,63 @@ body {
 }
 /* Footer End */
 
+/* For navside bar start */
+
+.navSidebar.activeOne {
+  left: 0;
+}
+
+.sideBarActive {
+  background-color: #e86f52 !important;
+  color: #fff;
+}
+
+.navSidebar {
+  margin-top: 48px;
+  height: 100vh;
+  width: 260px;
+  position: fixed;
+  top: 0;
+  left: -270px;
+  background-color: #525252;
+  transition: all 0.3s ease-in-out;
+  z-index: 1200;
+  border-radius: none !important;
+
+  .style-two {
+    border-radius: none !important;
+    list-style-type: none;
+
+    .items {
+      width: 100%;
+      border-radius: none !important;
+      border: none !important;
+      cursor: pointer;
+      padding: 0 !important;
+
+      .v-expansion-panel-text__wrapper {
+        padding: 0 !important;
+        background-color: #8e8c8c;
+      }
+
+      .item-edit {
+        color: #fff;
+        width: 100%;
+        text-decoration: none;
+        border: none !important;
+        border-radius: none !important;
+        padding: 14px 20px;
+      }
+
+      &:hover {
+        background-color: #e86f52;
+      }
+    }
+  }
+}
+
+/* For navside bar end */
+
 // Styles for desktop view
 @media only screen and (min-width: 768px) {
   // Define styles for desktop view here ( Desktop ) **
@@ -2988,9 +3127,7 @@ body {
           position: absolute;
           width: 45vh;
           height: 45vh;
-
           border-radius: 14px;
-          z-index: 500;
         }
         .img-content::before {
           background-color: #e86f52;
@@ -3006,7 +3143,7 @@ body {
           background-size: cover;
           background-position: center;
           box-shadow: 0px 4px 20px 1px rgba(0, 0, 0, 0.5);
-          z-index: 500;
+          z-index: 1;
         }
 
         .left-text {
@@ -3018,6 +3155,14 @@ body {
           backdrop-filter: blur(20px);
           -webkit-backdrop-filter: blur(20px);
           border-radius: 10px;
+        }
+        &:hover .img-content::before {
+          z-index: 1;
+          box-shadow: 0px 4px 20px 1px rgba(0, 0, 0, 0.5);
+        }
+        &:hover .img-content::after {
+          z-index: 0;
+          box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.5);
         }
       }
 
@@ -3037,7 +3182,7 @@ body {
             color: #fff;
             .custom-icon {
               transition: all 0.3s ease-in-out;
-              margin-top: 1px;
+              margin-top: 4px;
             }
 
             &:hover .custom-icon {
