--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -11,6 +11,7 @@ $font-family: "Roboto", sans-serif;
   font-family: $font-family;
   position: relative;
   text-decoration: none;
+  transition: all 0.2s ease-in-out;
   .bg-redbrick {
     background-color: #e86f52;
   }
@@ -290,7 +291,7 @@ body {
 .offcanvas-edit {
   background-color: #ccc;
   padding: 0px;
-  margin-top: 70px;
+  margin-top: 50px;
   width: 380px !important;
 
   .offcanvas-body {
@@ -655,6 +656,31 @@ body {
     .header {
       padding: 10px 0px;
 
+      .search-bar {
+        // border: 1px solid #525252;
+        // margin-bottom: 12px;
+        // border-radius: 10px;
+        // display: flex;
+        // overflow: hidden;
+
+        // input {
+        //   width: 75%;
+        //   padding: 10px;
+        //   &:focus {
+        //     outline: none;
+        //   }
+        // }
+        // .v-btn {
+        //   width: auto;
+        //   height: auto;
+        //   color: #fff;
+        //   background-color: #e86f52;
+        //   text-transform: capitalize;
+        //   border-top-right-radius: 10px;
+        //   border-bottom-right-radius: 10px;
+        // }
+      }
+
       span {
         font-weight: bold;
       }
@@ -796,6 +822,49 @@ body {
       color: #fff;
       .v-btn {
         text-transform: capitalize;
+      }
+    }
+
+    .interst-posts {
+      @include request-detail-card();
+      position: relative;
+      .header {
+        @include header-absolute();
+        .v-icon {
+          color: #fff;
+          font-size: 20px;
+        }
+      }
+      .post-icon {
+        border-radius: 6px;
+        overflow: hidden;
+        width: 100%;
+        margin: auto;
+        border: 1px solid #525252;
+        cursor: pointer;
+        position: relative;
+        height: 60px;
+        .pi-overlay {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          z-index: 1;
+          background-color: rgba(0, 0, 0, 0.3);
+          display: none;
+          transition: all 0.4s ease-in-out;
+        }
+        p {
+          font-size: 14px;
+          span {
+            color: #e86f52;
+          }
+        }
+
+        &:hover .pi-overlay {
+          display: block;
+        }
       }
     }
   }
@@ -1129,7 +1198,7 @@ body {
   .third-carousel {
     width: 100%;
     height: auto;
-    padding: 40px 0px;
+    padding: 100px 0px;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -1141,7 +1210,7 @@ body {
       transition: transform 0.4s ease-in-out;
     }
     .card-img {
-      width: 600px;
+      width: 400px;
       border-radius: 6px;
       position: relative;
       display: flex;
@@ -1629,15 +1698,7 @@ body {
 /* For fifth Doc Page end */
 
 /* For Commercial Page (one) start */
-.commercial-vue {
-  width: 100%;
-  height: 100vh;
 
-  .commercial-vue-data {
-    .left-pic {
-    }
-  }
-}
 /* For Commercial Page (two) End */
 
 /* For Contact Page start */
@@ -2812,7 +2873,7 @@ body {
   height: auto;
 
   .dashboard {
-    min-height: 100vh;
+    min-height: 70vh;
 
     .sidebar {
       background-color: #f8f9fa;
@@ -2833,6 +2894,13 @@ body {
 }
 /* For Main Index Dashboard end */
 
+/* For Main Index Dashboard start */
+.admin-dashboard {
+  width: 100%;
+  height: auto;
+}
+/* For Main Index Dashboard end */
+
 /* Footer start */
 .footer-vue {
   width: 100%;
@@ -2847,6 +2915,63 @@ body {
   }
 }
 /* Footer End */
+
+/* For navside bar start */
+
+// .navSidebar.activeOne {
+//   left: 0;
+// }
+
+// .sideBarActive {
+//   background-color: #e86f52 !important;
+//   color: #fff;
+// }
+
+// .navSidebar {
+//   margin-top: 48px;
+//   height: 100vh;
+//   width: 260px;
+//   position: fixed;
+//   top: 0;
+//   left: -270px;
+//   background-color: #525252;
+//   transition: all 0.3s ease-in-out;
+//   z-index: 1200;
+//   border-radius: none !important;
+
+//   .style-two {
+//     border-radius: none !important;
+//     list-style-type: none;
+
+//     .items {
+//       width: 100%;
+//       border-radius: none !important;
+//       border: none !important;
+//       cursor: pointer;
+//       padding: 0 !important;
+
+//       .v-expansion-panel-text__wrapper {
+//         padding: 0 !important;
+//         background-color: #8e8c8c;
+//       }
+
+//       .item-edit {
+//         color: #fff;
+//         width: 100%;
+//         text-decoration: none;
+//         border: none !important;
+//         border-radius: none !important;
+//         padding: 12px 20px;
+//       }
+
+//       &:hover {
+//         background-color: #e86f52;
+//       }
+//     }
+//   }
+// }
+
+/* For navside bar end */
 
 // Styles for desktop view
 @media only screen and (min-width: 768px) {
@@ -3054,7 +3179,8 @@ body {
   .second-tabContent {
     width: 100%;
     height: auto;
-    padding: 30px 0px 60px;
+    padding-top: 30px;
+    padding-bottom: 10px;
 
     .second-tabContent-data {
       .tab-carousel-content {
@@ -3149,12 +3275,13 @@ body {
   /* For fifth Doc Page end */
 
   /* For Commercial Page (one) start d */
-  .commercial-vue {
+  .no-post-view {
     width: 100%;
-    height: 90vh;
+    height: 60vh;
+    background-color: #f6f5f2;
 
-    .commercial-vue-data {
-      width: 85%;
+    .no-post-view-data {
+      width: 100%;
       height: 100%;
       margin: auto;
       position: relative;
@@ -3167,28 +3294,25 @@ body {
         .img-content::after {
           content: "";
           position: absolute;
-          width: 50vh;
-          height: 50vh;
-
+          width: 45vh;
+          height: 45vh;
           border-radius: 14px;
-          z-index: 500;
         }
         .img-content::before {
           background-color: #e86f52;
-          margin-left: 17%;
-          margin-top: 13%;
-          box-shadow: 0px 4px 20px -2px rgba(0, 0, 0, 0.3);
+          margin-left: 6%;
+          margin-top: 2%;
+          // box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.2);
         }
 
         .img-content::after {
-          margin-left: 24%;
-          margin-top: 20%;
-          background-image: url("../img/house-1.jpg");
+          margin-left: 14%;
+          margin-top: 7%;
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center;
-          box-shadow: 0px 4px 24px 6px rgba(0, 0, 0, 0.5);
-          z-index: 500;
+          box-shadow: 0px 4px 20px 1px rgba(0, 0, 0, 0.5);
+          z-index: 1;
         }
 
         .left-text {
@@ -3201,6 +3325,14 @@ body {
           -webkit-backdrop-filter: blur(20px);
           border-radius: 10px;
         }
+        &:hover .img-content::before {
+          z-index: 1;
+          box-shadow: 0px 4px 20px 1px rgba(0, 0, 0, 0.5);
+        }
+        &:hover .img-content::after {
+          z-index: 0;
+          box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.5);
+        }
       }
 
       .right-part {
@@ -3210,17 +3342,16 @@ body {
         .right-data {
           padding: 10px;
           position: absolute;
-          margin-top: 16%;
+          // margin-top: 16%;
           h2 {
             color: #e86f52;
           }
           .custom-btn {
             background-color: #e86f52;
             color: #fff;
-            box-shadow: 0px 6px 20px 2px rgba(0, 0, 0, 0.3);
             .custom-icon {
               transition: all 0.3s ease-in-out;
-              margin-top: 1px;
+              margin-top: 4px;
             }
 
             &:hover .custom-icon {
