--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -3542,7 +3542,7 @@ body {
 }
 
 .myCustomButton:hover {
-  background-color: #c74f31;
+  background-color: #c74f31 !important;
 }
 
 .myCustomSuccessButton {
@@ -3550,7 +3550,7 @@ body {
   color: #fff;
   padding: 12px 15px;
   border-radius: 6px;
-  background-color: #03c126;
+  background-color: #03c126 !important;
   transition: 0.3s;
   margin-bottom: 15px;
 }
